--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
 SERVER_HOST="http://localhost:3000"
 
+
 TWITCH_BOT_USERNAME=
-TWITCH_OAUTH_TOKEN=
+TWITCH_BOT_CLIENTID=
+TWITCH_CLIENT_SECRET=
+TWITCH_REDIRECT_URI=
 TWITCH_CHANNEL_NAME=
 
-WEBSOCKET_PORT=
+DATABASE_URL="file:./database/dev.db"
+
