--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,15 @@ lerna-debug.log*
 # Environment
 .env
 
+# Prisma
+/prisma/database
+
+# tokens
+/src/tokens
+
+# thunder
+/thunder-tests
+
 # Tests
 /coverage
 /.nyc_output
