--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MODE=development
+NODE_ENV=development
 SERVER_HOST="http://localhost:3000"
 SERVER=PORT=3000
 
@@ -10,3 +10,4 @@ TWITCH_CHANNEL_NAME=
 
 DATABASE_URL="file:./database/dev.db"
 
+JWT_SECRET=
