--- a/package.json
+++ b/package.json
@@ -20,19 +20,27 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.0.2",
-    "@prisma/client": "^4.16.2",
+    "@prisma/client": "^5.0.0",
     "@twurple/api": "^6.2.1",
     "@twurple/auth": "^6.2.1",
     "@twurple/chat": "^6.2.1",
     "@twurple/easy-bot": "^6.2.1",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-twitch": "^1.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "tmi.js": "^1.8.5"
@@ -41,9 +49,11 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^3.0.9",
     "@types/supertest": "^2.0.12",
     "@types/tmi.js": "^1.8.3",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
@@ -53,7 +63,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "prettier": "^2.8.8",
-    "prisma": "^4.16.0",
+    "prisma": "^5.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
