--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ SERVER_HOST="http://localhost:3000"
 SERVER=PORT=3000
 
 TWITCH_BOT_USERNAME=
-TWITCH_BOT_CLIENTID=
+TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
 TWITCH_REDIRECT_URI=
 TWITCH_CHANNEL_NAME=
